# Chess-App

./: README.md
chess2/: CMakeLists.txt
chess2/chess2/: CMakeLists.txt
chess2/chess2/include/: board.h  boardView.h  boardsquare.h  clock.h  constants.h  coord.h  mainwindow.h  move.h
chess2/chess2/include/pieces_inc/: bishop.h  king.h  knight.h  pawn.h  piece.h  queen.h  rook.h
chess2/chess2/resources/ui/: mainwindow.ui
chess2/chess2/src/: board.cpp  boardsquare.cpp  boardview.cpp  clock.cpp  main.cpp  mainwindow.cpp
chess2/chess2/src/pieces_src/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
